# HeatTransfer

./: .gitignore  LICENSE  README.md  ganalysis.py  main.py  setup.cfg  setup.py  zeros.py
.github/workflows/: python-app.yml
src/controller/: cmd.html  controls.py
src/conversion/: conversion.py
src/gui/: commands.py  gui.py  inputs.py
src/transient_analysis/: ganalysis.py  zeros.py
test/: test_analysis.py  test_conversion.py  test_gui.py
