[metadata]
name = transient_analysis
description = Analysis of objects in the heat transient regime
long_description = file: LICENSE
keywords = heat, transfer, transient-regime
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ; python_version<"3.7"


[options.packages.find]
where=src